--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title> Index Page </title>
-<link rel="stylesheet" href="des.css"/>
-</head>
-<body>
+
+
+<h1>Slickaccount_test_formPage</h1>
+
+<body background="C:\Users\SCHOOL\Desktop\images.jpg">
+
+<form action="action_page.php">
+<fieldset>
+<legend>Personal information:</legend>
+First name:<br>
+<input type="text" name="firstname" value="MY">
+<br>
+Last name:<br>
+<input type="text" name="lastname" value="SLICKACCOUNT">
+<br><br>
+<input type="submit" value="Submit"></fieldset>
+</form>
+
 </body>
+</html>
