--- a/index.html
+++ b/index.html
@@ -4,5 +4,49 @@
 <link rel="stylesheet" href="des.css"/>
 </head>
 <body>
-<img src="
+<div id="top">
+<center>
+<img id="banner" src="http://rockstartemplate.com/blogheaders/bannerdesign2.jpg">
+</center>
+</div>
+<center>
+<div id="bottom">
+	<table width="100%" height="800px" cellpadding="10" cellspacing="10">
+	<tr>
+		<td width="50%">
+		<div id="div4">
+			<h2> Heading </h2>
+			<p>Pull requests let you tell others about changes you've pushed to a repository on GitHub. Once a pull request is sent, interested parties can review the set of changes, discuss potential modifications, and even push follow-up commits if necessary.</p>
+		</div>
+		<div id="div4">
+			<h2> Heading </h2>
+			<p>Pull requests let you tell others about changes you've pushed to a repository on GitHub. Once a pull request is sent, interested parties can review the set of changes, discuss potential modifications, and even push follow-up commits if necessary.</p>
+		</div>
+		</td>
+		<td width="50%">
+		<div id="div5" style="background-color:#00000">
+		<center>
+			<iframe width="560" height="255" src="https://www.youtube.com/embed/dVDk7PXNXB8" frameborder="0" allowfullscreen></iframe>
+			</center>
+		</div>
+		<div id="div5">
+			<h2> Heading </h2>
+			<p>Pull requests let you tell others about changes you've pushed to a repository on GitHub. Once a pull request is sent, interested parties can review the set of changes, discuss potential modifications, and even push follow-up commits if necessary.</p>
+		</div>
+		<div id="div5">
+			<center>
+			</br>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d14962.357728153038!2d85.82301509999999!3d20.358573!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1430897521141" width="560" height="210" frameborder="0" style="border:0"></iframe></center>
+		</div>
+		</td>
+	</tr>
+	</table>
+	
+	<div id="top">
+	<center>
+	<img src="http://static1.squarespace.com/static/519fe72de4b03507cc809462/t/520a3311e4b019bfc9dc2c8a/1376400146127/Register-Now_Button.png">
+	</center>
+	</div>
+</div>
+</center>
 </body>
