--- a/reg.html
+++ b/reg.html
@@ -4,6 +4,9 @@
 <link rel="stylesheet" href="des.css"/>
 </head>
 <body>
+<center>
+<img src="register.png"/>
+</center>
 <div id="form">
 <form method="post" action="#" >
 <center>
